# phonetic-fidelity-voice-conversion-ptbr

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/: main_pipeline.py
src/utils/: common.py  dataset_preparation.py  generate_synthesized_speakers.py  generates_phoneme_sequences.py  generates_source_speakers.py  generates_target_speakers.py
